Fix alignment on featured breach page sign up blurb.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -199,7 +199,8 @@ footer img {
 .fourth,
 .third,
 .two-thirds,
-.half {
+.half,
+.three-fourths {
   margin: calc(var(--columnSpacing) / 2);
 }
 
